modify the "add" api and let it edit the partnership if id exist
